Mon Nov 22 10:18:24 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dance/DAnCE_Utility.h:
        * dance/LocalityManager/Handler/Locality_Manager_Handler_Impl.cpp:
        * dance/LocalityManager/Scheduler/Events/Connect.cpp:
        * dance/LocalityManager/Scheduler/Events/Install.cpp:
        * dance/NodeApplication/NodeApplication_Impl.h:
        * dance/NodeApplication/NodeApplication_Impl.cpp:
        * dance/NodeManager/Node_Manager_Module.cpp:
        * tests/Config_Handlers/Package_Handlers/test.cpp:
        * tests/Config_Handlers/test.cpp:
        * tools/System_Health/Interceptors/SHS_Interceptor.cpp:
          Various layout, logging improvements

Tue Nov  2 11:30:24 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * NEWS:

Mon Nov 01 13:21:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * dance/DomainApplicationManager/Node_Locator.cpp:
        * dance/DomainApplicationManager/Node_Locator.h:
        * dance/ExecutionManager/ExecutionManager_Impl.cpp:
        * dance/ExecutionManager/ExecutionManager_Module.cpp:
        * dance/ExecutionManager/ExecutionManager_Impl.h:
        * dance/ExecutionManager/ExecutionManager_Module.h:
        Removed functionality to use *.dat file containing node manager map,
        so also removed option node-map.

Sat Oct 30 12:22:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * dance/DAnCE_Utility.h:
        Export new function get_satisfierproperty_value

Fri Oct 29 13:12:01 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * dance/DomainApplicationManager/Node_Locator.cpp:
        * dance/DomainApplicationManager/Node_Locator.h:
        * dance/DAnCE_Properties.idl:
        Add check on property name and resourceType for Node address in cdd file.

        * dance/DAnCE_Utility.h:
        * dance/DAnCE_Utility.cpp:
        Add get_satisfierproperty_value
